<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">X街</string>
    <string name="http_changpaw">api/Memberaccount/modify_password</string>
    <string name="http_changphone">api/Memberaccount/modify_mobile</string>
    <string name="http_pay_psw">api/Memberaccount/payment_password</string>
    <string name="http_userinfom">api/Member/index</string>
    <string name="http_money">api/member/my_balance</string>
    <string name="http_bank_list">api/memberaccount/getBankList</string>
    <string name="http_my_bank_list">api/memberaccount/bankCardList</string>
    <string name="http_submit_hear_nick">api/member/modifyAvatarNickName</string>
    <string name="http_my_red_packer">api/member/myRedPacket</string>
    <string name="http_my_address_lsit">api/Memberaddress/address_list</string>
    <string name="http_add_address">api/Memberaddress/address_add</string>
    <string name="http_make_address">api/Memberaddress/address_edit</string>
    <string name="http_delete_address">api/Memberaddress/address_del</string>
    <string name="http_partner_info">api/member/partner_info</string>
    <string name="http_upload_image">api/Member/upload_image</string>
    <string name="http_my_collect">api/member/myFavorites</string>
    <string name="http_more_shop">api/merchant_service/shopTypeList</string>
    <string name="http_shop_list">api/merchant_service/shopList</string>
    <string name="http_canner_collect">api/merchant_service/favorites_del</string>
    <string name="http_evaluate_list">api/goods/goods_evaluates</string>
    <string name="http_invite_regitst">api/Connect/sms_register.html</string>
    <string name="http_msg_list">api/member_message/lists</string>
    <string name="http_home_type">api/index/category</string>
    <string name="http_home_seach">api/goods/find</string>
    <string name="http_weixin_login">api/Wxlogin/getUserAccessUserInfo</string>
    <string name="http_my_tream">api/member/myTeam</string>
    <string name="http_bind_weixin">api/Wxlogin/bindUserMobile</string>
    <string name="http_bind_bank">api/memberaccount/bindBankCard</string>
    <string name="http_my_voucher">api/member/my_voucher</string>
    <string name="http_bind_alipay">api/memberaccount/bindAlipay</string>
    <string name="http_my_alipay">api/memberaccount/my_alipay</string>
    <string name="http_partner_submit_order">api/member/partner_submit_order</string>
    <string name="http_update">api/Index/update</string>
    <string name="http_shop_service">api/merchant_service/index</string>
    <string name="http_delete_msg">api/member_message/del_msg</string>
    <string name="suggesst">api/Memberfeedback/feedback_add</string>
    <string name="http_help_list">api/help/lists</string>
    <string name="http_help_detail">api/help/detail</string>
    <string name="http_delete_weixin">api/member/unbindWeChat</string>
    <string name="http_msg_number">api/member_message/hasNewMsg</string>
    <string name="http_payment">api/index/payment_type</string>
    <string name="http_recharge_amount">api/member/recharge_amount</string>
    <string name="http_gold_coin">api/member/my_gold_coin</string>
    <string name="http_unbindAlipay">api/memberaccount/unbindAlipay</string>
    <string name="http_bind_weixinmine">api/member/bindWeChat</string>
    <string name="http_jobs_deleteCard">api/memberaccount/delbankcard</string>
    <string name="http_jobs_editbankcard">api/memberaccount/editbankcard</string>
    <string name="http_jobs_MyService">api/customerservice/logs</string>
    <string name="http_addBaseInfo">api/recruit.user_cv/addBaseInfo</string>
    <string name="http_positions">api/recruit.cominfo/positions</string>
    <string name="http_industries">api/recruit.cominfo/industries</string>
    <string name="http_recruithome_in">api/recruit.enter/index</string>
    <string name="http_re_employee">api/recruit.talk/employee_list_init</string>
    <string name="http_jobs_banner">api/recruit.employee_home/adv</string>
    <string name="http_jobs_recommend">api/recruit.employee_home/position_recommend</string>
    <string name="http_jobs_CommonKeys">api/recruit.cominfo/getCommonKeys</string>
    <string name="http_jobs_changeIdentity">api/recruit.enter/changeIdentity</string>
    <string name="http_jobs_addEducation">api/recruit.user_cv/addEducation</string>
    <string name="http_jobs_editEducation">api/recruit.user_cv/editEducation</string>
    <string name="http_jobs_editWorkExperience">api/recruit.user_cv/editWorkExperience</string>
    <string name="http_jobs_addWorkExperience">api/recruit.user_cv/addWorkExperience</string>
    <string name="http_jobs_addExpectJobInfo">api/recruit.user_cv/addExpectJobInfo</string>
    <string name="http_jobs_addSelfAssessment">api/recruit.user_cv/addSelfAssessment</string>
    <string name="http_jobs_sendList">api/recruit.employee/sendList</string>
    <string name="http_jobs_setting">api/recruit.employee/setting</string>
    <string name="http_jobs_changeMobile">api/recruit.employee/changeMobile</string>
    <string name="http_jobs_changeinfomMobile">api/recruit.user_cv/checkMobile</string>
    <string name="http_jobs_changeEmail">api/recruit.employee/changeEmail</string>
    <string name="http_jobs_changeState">api/recruit.employee/changeState</string>
    <string name="http_jobs_rcmin">api/recruit.employee/index</string>
    <string name="http_jobs_myCV">api/recruit.user_cv/myCV</string>
    <string name="http_jon_delWorkExperience">api/recruit.user_cv/delWorkExperience</string>
    <string name="http_jon_delEducation">api/recruit.user_cv/delEducation</string>
    <string name="http_jon_my_like">api/recruit.position_like/my_like</string>
    <string name="http_jon_canceljob">api/recruit.position_like/cancel</string>
    <string name="http_jon_editCurrentStatus">api/recruit.user_cv/editCurrentStatus</string>
    <string name="http_boss_position_detail">api/recruit.employee_home/position_detail</string>
    <string name="http_boss_position_add">api/recruit.position_like/add</string>
    <string name="http_boss_position_cancel">api/recruit.position_like/cancel</string>
    <string name="http_boss_company_report">api/recruit.employee_home/company_report</string>
    <string name="http_boss_cv_send">api/recruit.employee_home/cv_send</string>
    <string name="http_boss_nearest_position">api/recruit.employee_home/nearest_position</string>
    <string name="http_boss_position_list">api/recruit.employee_home/position_list</string>
    <string name="http_boss_position_search">api/recruit.employee_home/position_search</string>
    <string name="http_boss_employee_start_talk">api/recruit.talk/employee_start_talk</string>
    <string name="http_boss_employee_talk_init">api/recruit.talk/employee_talk_init</string>
    <string name="http_job_sendDetail">api/recruit.employee/sendDetail</string>
    <string name="http_boss_addBaseinfo">api/recruit.boss_info/addBaseinfo</string>
    <string name="http_boss_companysearch">api/recruit.company/search</string>
    <string name="http_boss_checkidinfo">api/recruit.boss_info/CheckIDinfo</string>
    <string name="http_boss_companyadd">api/recruit.company/add</string>
    <string name="http_boss_positions">api/recruit.boss_home/positions</string>
    <string name="http_boss_addPosition">api/recruit.position/addPosition</string>
    <string name="http_boss_bossInfom">api/recruit.boss_info/detail</string>
    <string name="http_boss_bossme">api/recruit.boss/index</string>
    <string name="http_boss_editbossinfom">api/recruit.boss_info/editBaseinfo</string>
    <string name="http_boss_bosslists">api/recruit.position/lists</string>
    <string name="http_boss_bossdetail">api/recruit.company/detail</string>
    <string name="http_boss_cv_recommend">api/recruit.boss_home/cv_recommend</string>
    <string name="http_boss_changerinfom">api/recruit.company/edit</string>
    <string name="http_boss_check">api/recruit.boss/to_check</string>
    <string name="http_boss_interview">api/recruit.boss/to_interview</string>
    <string name="http_boss_cv_logs">api/recruit.boss/cv_logs</string>
    <string name="http_boss_interview_logs">api/recruit.boss/interview_logs</string>
    <string name="http_boss_changeCompany">api/recruit.boss_info/changeCompany</string>
    <string name="http_boss_cv_detail">api/recruit.boss/cv_detail</string>
    <string name="http_boss_home_cv_detail">api/recruit.boss_home/cv_detail</string>
    <string name="http_boss_job_detail">api/recruit.position/detail</string>
    <string name="http_boss_job_stop">api/recruit.position/stop</string>
    <string name="http_boss_job_open">api/recruit.position/open</string>
    <string name="http_boss_interview_detail">api/recruit.boss/interview_detail</string>
    <string name="http_boss_not_match">api/recruit.boss/mark_not_match</string>
    <string name="http_boss_not_come">api/recruit.boss/mark_not_come</string>
    <string name="http_boss_end_interview">api/recruit.boss/mark_end_interview</string>
    <string name="http_boss_send_interview">api/recruit.boss/Invite</string>
    <string name="http_boss_send_like_me">api/recruit.position_like/like_me</string>
    <string name="http_boss_editPosition">api/recruit.position/editPosition</string>
    <string name="http_boss_start_talk">api/recruit.talk/boss_start_talk</string>
    <string name="http_boss_list_init">api/recruit.talk/boss_list_init</string>
    <string name="http_boss_talk_init">api/recruit.talk/boss_talk_init</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="tab_home">首页</string>
    <string name="tab_hot">发现</string>
    <string name="tab_type">分类</string>
    <string name="tab_msg">消息</string>
    <string name="tab_me">我的</string>
    <string name="tab_me1">个人中心</string>
    <string name="login">登录</string>
    <string name="wx_login">微信快捷登录</string>
    <string name="register">注册</string>
    <string name="login_phone_hint">请输入您的手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_no_account_tip">还没有账号？</string>
    <string name="forget_password2">忘记密码</string>
    <string name="input_verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">点击获取</string>
    <string name="input_new_password_hint">请输入您的新密码</string>
    <string name="input_new_password_hint2">再次输入您的新密码</string>
    <string name="enter">确定</string>
    <string name="text_forget_pwd">忘记原密码？</string>
    <string name="text_config_update">确定修改</string>
    <string name="text_old_pwd">原密码</string>
    <string name="hint_old_pwd">请输入原登陆密码</string>
    <string name="text_new_pwd">新密码</string>
    <string name="hint_new_pwd">请输入新登陆密码</string>
    <string name="text_real_name">真实姓名</string>
    <string name="text_card_id">身份证号</string>
    <string name="text_card_num">银行卡号</string>
    <string name="text_card_belong">所属银行</string>
    <string name="text_card_phone">手机号码</string>
    <string name="text_bind_now">立即绑定</string>
    <string name="hint_real_name">请输入您的真实姓名</string>
    <string name="hint_card_id">请输入您的身份证号</string>
    <string name="hint_card_num">输入银行卡卡号</string>
    <string name="hint_card_belong">点击获取发卡行名称</string>
    <string name="hint_card_phone">输入银行预留手机号码</string>
    <string name="text_card_support_bank">当前支持绑定的银行：\n\n中国农业银行，中国工商银行，中国建设银行，中国银行，交 通银行，平安银行，中国光大银行，中信银行，兴业银行，上 海浦东发展银行，中国民生银行，华夏银行，北京银行。</string>
    <string name="text_config_send">确认发送</string>
    <string name="hint_input_order_sn">请输入物流单号</string>
    <string name="text_order_sn">物流单号：</string>
    <string name="text_choose_logistics_company">点击选择您发货的物流公司</string>
    <string name="text_logistics_company">物流公司：</string>
    <string name="text_input_num_latter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>