<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:ignore="MissingConstraints,RtlSymmetry">

    <include
        android:id="@+id/root_title"
        layout="@layout/toolbar_normal_title" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ctl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_285"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_11"
        android:paddingEnd="@dimen/dp_11"
        app:layout_constraintTop_toBottomOf="@id/root_title">

        <TextView
            android:id="@+id/tv_real_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/text_real_name"
            android:textColor="@color/color_444A53"
            android:textSize="@dimen/ts_16" />

        <EditText
            android:id="@+id/et_real_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_57"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@null"
            android:hint="@string/hint_real_name"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/ts_15"
            app:layout_constraintLeft_toRightOf="@id/tv_real_name"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E9EFF7"
            app:layout_constraintTop_toBottomOf="@id/tv_real_name" />

        <TextView
            android:id="@+id/tv_card_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/text_card_id"
            android:textColor="@color/color_444A53"
            android:textSize="@dimen/ts_16"
            app:layout_constraintTop_toBottomOf="@id/tv_real_name" />

        <EditText
            android:id="@+id/et_card_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_57"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@null"
            android:hint="@string/hint_card_id"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/ts_15"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_id"
            app:layout_constraintLeft_toRightOf="@id/tv_card_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_card_id" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E9EFF7"
            app:layout_constraintTop_toBottomOf="@id/tv_card_id" />

        <TextView
            android:id="@+id/tv_card_num"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/text_card_num"
            android:textColor="@color/color_444A53"
            android:textSize="@dimen/ts_16"
            app:layout_constraintTop_toBottomOf="@id/tv_card_id" />

        <EditText
            android:id="@+id/et_card_num"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_57"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@null"
            android:hint="@string/hint_card_num"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/ts_15"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_num"
            app:layout_constraintLeft_toRightOf="@id/tv_card_num"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_card_num" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E9EFF7"
            app:layout_constraintTop_toBottomOf="@id/tv_card_num" />

        <TextView
            android:id="@+id/tv_card_belong"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/text_card_belong"
            android:textColor="@color/color_444A53"
            android:textSize="@dimen/ts_16"
            app:layout_constraintTop_toBottomOf="@id/tv_card_num" />

        <EditText
            android:id="@+id/et_card_belong"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_57"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@null"
            android:hint="@string/hint_card_belong"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/ts_15"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_belong"
            app:layout_constraintLeft_toRightOf="@id/tv_card_belong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_card_belong" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E9EFF7"
            app:layout_constraintTop_toBottomOf="@id/tv_card_num" />

        <TextView
            android:id="@+id/tv_card_phone"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_57"
            android:gravity="center"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/text_card_phone"
            android:textColor="@color/color_444A53"
            android:textSize="@dimen/ts_16"
            app:layout_constraintTop_toBottomOf="@id/tv_card_belong" />

        <EditText
            android:id="@+id/et_card_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_57"
            android:layout_marginStart="@dimen/dp_17"
            android:background="@null"
            android:maxLength="11"
            android:hint="@string/hint_card_phone"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/ts_15"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_phone"
            app:layout_constraintLeft_toRightOf="@id/tv_card_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_card_phone" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_24"
        android:background="@drawable/normal_red_btn_bg"
        android:text="@string/text_bind_now"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_17"
        app:layout_constraintTop_toBottomOf="@id/ctl_top" />


    <TextView
        android:id="@+id/tv_support_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_13"
        android:textSize="@dimen/ts_13"
        android:textColor="@color/edit_hint_color"
        android:paddingTop="@dimen/dp_34"
        android:text="@string/text_card_support_bank"
        app:layout_constraintTop_toBottomOf="@id/btn_commit" />


</android.support.constraint.ConstraintLayout>