<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:ignore="MissingConstraints">


    <include
        android:id="@+id/root_title"
        layout="@layout/toolbar_normal_title" />


    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_51"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:text="@string/text_logistics_company"
        android:textColor="@color/black_33"
        android:textSize="@dimen/ts_14"
        app:layout_constraintTop_toBottomOf="@id/root_title" />

    <TextView
        android:id="@+id/tv_choose_company"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_51"
        android:background="@color/white"
        android:drawableEnd="@mipmap/jft_but_arrow"
        android:gravity="center_vertical"
        android:hint="@string/text_choose_logistics_company"
        android:paddingEnd="@dimen/dp_15"
        android:textColor="@color/black_33"
        android:textColorHint="@color/edit_hint_color"
        android:textSize="@dimen/ts_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_company_name"
        app:layout_constraintLeft_toRightOf="@id/tv_company_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_company_name" />


    <TextView
        android:id="@+id/tv_order_sn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_51"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:text="@string/text_order_sn"
        android:textColor="@color/black_33"
        android:textSize="@dimen/ts_14"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name" />

    <EditText
        android:id="@+id/et_order_sn"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_51"
        android:background="@color/white"
        android:drawableEnd="@mipmap/jft_but_arrow"
        android:maxLength="30"
        android:inputType="number|textEmailAddress"
        android:digits="@string/text_input_num_latter"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_order_sn"

        android:paddingEnd="@dimen/dp_15"
        android:textColor="@color/black_33"
        android:textColorHint="@color/edit_hint_color"
        android:textSize="@dimen/ts_14"
        app:layout_constraintBottom_toBottomOf="@id/tv_order_sn"
        app:layout_constraintLeft_toRightOf="@id/tv_order_sn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_order_sn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_E9EFF7"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name" />



    <Button
        android:id="@+id/btn_commit"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_17"
        android:layout_width="match_parent"
        android:background="@drawable/normal_red_btn_bg"
        app:layout_constraintTop_toBottomOf="@id/et_order_sn"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/text_config_send"
        android:layout_height="@dimen/dp_47" />
</android.support.constraint.ConstraintLayout>