<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_normal_title" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/forget_password2"
                android:textColor="@color/black_33"
                android:textSize="@dimen/ts_28"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_45"
                android:background="@color/color_transparent"
                android:hint="@string/login_phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="@dimen/ts_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_split_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_VerificationCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@color/color_transparent"
                    android:hint="@string/input_verification_code_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="@dimen/ts_15" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/dp_35"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:background="@color/color_split_line" />

                <TextView
                    android:id="@+id/tv_Send_Code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_14"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/ts_14" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_split_line" />

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@color/color_transparent"
                android:hint="@string/input_new_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/ts_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/color_split_line" />

            <EditText
                android:id="@+id/et_Password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@color/color_transparent"
                android:hint="@string/input_new_password_hint2"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/ts_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_split_line" />

            <Button
                android:id="@+id/bt_Enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/normal_btn_bg"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_17" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
